--- a/frontend/code-editor.html
+++ b/frontend/code-editor.html
@@ -7,28 +7,99 @@
   <link rel="stylesheet" href="code-editor.css">
 </head>
 <body>
-  <div class="project-tree">
-    <h3>My Project</h3>
-    <ul id="file-tree">
-      <li onclick="loadContent('file_1.sql', 'tab1')">file_1.sql</li>
-      <li onclick="loadContent('file_2.sql', 'tab2')">file_2.sql</li>
-      <li onclick="loadContent('file_3.sql', 'tab3')">file_3.sql</li>
-    </ul>
-  </div>
-  <div class="container">
-    <div id="file-tabs" class="tabs">
-      <button class="tab-button active" id="tab1"     onclick="loadContent('file_1.sql', 'tab1')">file_1.sql</button>
-      <button class="tab-button"        id="tab2"     onclick="loadContent('file_2.sql', 'tab2')">file_2.sql</button>
-      <button class="tab-button"        id="tab3"     onclick="loadContent('file_3.sql', 'tab3')">file_3.sql</button>
-      <button class="tab-button"        id="new-tab"  onclick="createNewFile()">+</button>
+
+  <div id="top-container" class="horizontal-container">
+    <div class="action-bar">
+      <button id="menu-button" class="action-bar-button" title="Menu">
+        <img src="assets/icons/menu.svg" alt="Menu" class="svg-icon">
+      </button>
     </div>
-    <div id="editor" class="editor">
-      <div class="line-numbers" id="line-numbers"></div>
-      <pre id="code" class="code-editor" contenteditable="true"></pre>
-    </div>
-    <button id="save-button">Save</button>
   </div>
+
+  <div id="middle-container"  class="horizontal-container">
+
+    <div class="col col-1">
+      <div class="vertical-action-bar">
+        <button id="connections-button" class="action-bar-button" title="DB Connections">
+          <img src="assets/icons/connections.svg" alt="DB Connections">
+        </button>
+        <button id="project-files-button" class="action-bar-button" title="Project-files">
+          <img src="assets/icons/project-files.svg" alt="Project Files" class="svg-icon-fallback">
+        </button>
+        <div class="svg-icon-fallback" style="width: 24px; height: 24px;">
+
+        </div>
+      </div>
+    </div>
+
+    <div class="col col-2">
+      <div class="project-tree">
+        <h3>My Project</h3>
+        <hr>
+        <ul id="file-tree">
+          <li onclick="loadContent('file_1.sql', 'tab1')">file_1.sql</li>
+          <li onclick="loadContent('file_2.sql', 'tab2')">file_2.sql</li>
+          <li onclick="loadContent('file_3.sql', 'tab3')">file_3.sql</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col col-3">
+      <div id="editor-container" class="container">
+        <div id="file-tabs" class="tabs">
+          <button class="tab-button active" id="tab1"     onclick="loadContent('file_1.sql', 'tab1')">file_1.sql</button>
+          <button class="tab-button"        id="tab2"     onclick="loadContent('file_2.sql', 'tab2')">file_2.sql</button>
+          <button class="tab-button"        id="tab3"     onclick="loadContent('file_3.sql', 'tab3')">file_3.sql</button>
+          <button class="tab-button"        id="new-tab"  onclick="createNewFile()">+</button>
+        </div>
+        <div id="editor-action-bar" class="horizontal-actionbar">
+          <button id="connect-button" class="icon">Connect</button>
+          <button id="run-button"     class="icon">Run</button>
+          <button id="save-button"    class="icon">Save</button>
+        </div>
+        <div id="editor" class="editor">
+          <div class="line-numbers" id="line-numbers"></div>
+          <pre id="code" class="code-editor" contenteditable="true"></pre>
+        </div>
+        <div id="editor-info-bar" class="horizontal-actionbar">
+          <p>File status ...</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col col-4">
+        <div class="notifications-list">
+          <h2>Notifications</h2>
+          <hr>
+          <ul>
+            <li>Notification 1</li>
+            <li>Notification 2</li>
+            <li>Notification 3</li>
+          </ul>
+        </div>
+    </div>
+
+    <div class="col col-5">
+      <div class="vertical-action-bar">
+        <button id="notifications-button" class="action-bar-button" title="Notifications">
+          <img src="assets/icons/notifications.svg" alt="Notifications">
+        </button>
+        <button id="smart-assistant-button" class="action-bar-button" title="Smart Assistant">
+          <img src="assets/icons/smart-assistant.svg" alt="Smart Assistant">
+        </button>
+      </div>
+    </div>
+
+  </div>
+
+  <div id="bottom-container"  class="horizontal-container">
+    <div class="info-bar">
+      <p>Window status ...</p>
+    </div>
+  </div>
+
   <script src="code-editor.js"></script>
   <script src="backend_communication.js"></script>
+  
 </body>
 </html>
