new alpha release build v0.0.3

--- a/frontend/code-editor.html
+++ b/frontend/code-editor.html
@@ -26,7 +26,7 @@
         <button id="project-files-button" class="action-bar-button" title="Project-files">
           <img src="assets/icons/project-files.svg" alt="Project Files" class="svg-icon-fallback">
         </button>
-        <div class="svg-icon-fallback" style="width: 24px; height: 24px;">
+        <div class="action-bar-button svg-icon-fallback" style="width: 24px; height: 24px;">
 
         </div>
       </div>
