Fixed save button

--- a/frontend/code-editor.html
+++ b/frontend/code-editor.html
@@ -11,17 +11,18 @@
   <div id="top-container" class="horizontal-container">
     <div id="menu-widget" class="horizontal-action-bar">
       <button id="menu-button" class="action-bar-button" title="Menu">
-        <img src="assets/icons/menu.svg" alt="Menu" class="svg-icon" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
+        <img src="assets/icons/menu.svg" alt="Menu" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
       </button>
     </div>
     <div id="connection-widget" class="horizontal-action-bar">
-      <button id="menu2-button" class="action-bar-button" title="Menu">
-        <img src="assets/icons/connect.svg" alt="Menu" class="svg-icon" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
+      <button id="connect-button" class="action-bar-button" title="Menu">
+        <img src="assets/icons/connect.svg" alt="Connect" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
+        Connect
       </button>
     </div>
     <div id="top-right-widget" class="horizontal-action-bar">
-      <button id="menu3-button" class="action-bar-button" title="Menu">
-        <img src="assets/icons/something.svg" alt="Menu" class="svg-icon" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
+      <button id="something-button" class="action-bar-button" title="Menu">
+        <img src="assets/icons/something.svg" alt="Something" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
       </button>
     </div>
   </div>
@@ -76,7 +77,7 @@
             <img src="assets/icons/run.svg" alt="Run file" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
           </button>
           <button id="editor-save-button" class="action-bar-button" title="Save file">
-            <img src="assets/icons/save.svg" alt="Save file" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';" onclick="saveContent()">
+            <img src="assets/icons/save.svg" alt="Save file" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
           </button>
         </div>
         <div id="editor" class="editor">
