Added stub function in the frontend, that call the backend with the command data types. connectToOracleDB() uses the ConnectionPayload, and runSQL uses the SQLPayload. Compiles, is stable.
Connecting to the database is only partically implemented. Still need to implement the commands using the oracle_db lib. And create UI for user input in the frontend.

--- a/frontend/code-editor.html
+++ b/frontend/code-editor.html
@@ -17,8 +17,11 @@
     <div id="connection-widget" class="horizontal-action-bar">
       <button id="connect-button" class="action-bar-button" title="Menu">
         <img src="assets/icons/connect.svg" alt="Connect" onerror="this.onerror=null; this.src='assets/icons/fallback-icon.svg';">
-        Connect
       </button>
+      <p>Connect</p>
+      <input type="hidden" id="username" name="username" value="testname">
+      <input type="hidden" id="password" name="password" value="testpw">
+      <input type="hidden" id="database" name="database" value="testdb">
     </div>
     <div id="top-right-widget" class="horizontal-action-bar">
       <button id="something-button" class="action-bar-button" title="Menu">
